@@ -313,6 +313,7 @@ priority    = 1
 magic       = lzma_alone:lzma_alone_alt
 noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:resource:dalvik:audio:video
 description = Unpack LZMA compressed files
+envvars     = LZMA_MINIMUM_SIZE=10
 enabled     = yes
 
 [lzo]
